# detector-geometry

./: .gitignore  README.md
.github/workflows/: generator.yml
BabyIAXO/: README.md
BabyIAXO/reference/: GeometryPipe.gdml  GeometryShielding.gdml  GeometryVetoes.gdml  Setup.gdml  test.C
BabyIAXO/top_veto_variations/: SetupDoubleTop.gdml  SetupInBetween.gdml  SetupQuadTop.gdml  SetupSingleTop.gdml  SetupTripleTop.gdml
G4Geometry/: CMakeLists.txt  main.cpp
G4Geometry/include/: BabyIaxoGeometry.h  BaseGeometry.h  IaxoGeometry.h
G4Geometry/src/: BabyIaxoGeometry.cpp  BaseGeometry.cpp  IaxoGeometry.cpp
GeometryGeneratorIAXO/: CMakeLists.txt  main.cpp
GeometryGeneratorIAXO/include/: BabyIaxoGeometry.h  BaseGeometry.h  OpticalTest.h
GeometryGeneratorIAXO/src/: BabyIaxoGeometry.cpp  BaseGeometry.cpp  OpticalTest.cpp
IAXO-D0/: GeometryVetoes.gdml  README.md
IAXO-D0 copy/: README.md
IAXO-D0/oct-2019/: GeometryMain.gdml  Setup.gdml
IAXO-D0/reference/: GeometryMain.gdml  GeometryShielding.gdml  GeometrySteelTube.gdml  GeometryVetoes.gdml  Setup.gdml
experiment/BabyIAXO/: README.md
gdml/: Chamber.gdml  DetectorPipe.gdml  Setup.gdml
gdml/BabyIAXO/: Chamber.gdml  ChamberAndPipe.gdml  Default.gdml  DetectorPipe.gdml  NoVetos.gdml  Shielding.gdml  Veto.gdml  VetoSystem.gdml
gdml/IAXO-D1/: Chamber.gdml  ChamberAndPipe.gdml  Default.gdml  DetectorPipe.gdml  NoVetos.gdml  Shielding.gdml  Veto.gdml  (+1 more)
generator/: build.gradle.kts  settings.gradle.kts
macros/: SaveGdmlToRoot.C  ViewGdml.C
miscellaneous/: materials.xml
root/: CheckOverlaps.C  ViewGdml.C
(+42 files in other folders)
